fixed style profile restore pw

--- a/client/back-office/views/profile.html
+++ b/client/back-office/views/profile.html
@@ -108,17 +108,26 @@
       const fillPwRestoreList = () => {
         let tmp = "Password to restore:";
         if(pwRestoreList.length > 0){
-          pwRestoreList.map((item) => {
-            console.log(item)
+          pwRestoreList.map((item, index) => {
+            let date = new Date(item.timestamp).toISOString().split('T')[0]
+            let time = (new Date(item.timestamp)).toString().substring(16,21)
               tmp +=
-                `<div class="primary font-bold my-8">` +
-                item.mail +
-                ` ` +
-                item.timestamp +
-                `
-                <button class="btn primary" onclick="delPwRestore('`+item._id+`')"> Delete </button>
+                `<div class="flex flex-row my-4">`+
+                  (index+1) + `.
+                  <div class="flex flex-col bg-white ml-2 p-2 rounded-lg">
+                    <div><span class="font-bold">Email: </span> <span class="font-bold primary">` +
+                  item.mail +
+                  `</span>
+                  </div>
+                  <div><span class="font-bold">Request date: </span>` +
+                  date +
+                  `</div>
+                  <div><span class="font-bold">Request time: </span>` +
+                  time +
+                  `</div>
+                  <button class="flex self-center btn bg-danger rounded lg my-1 mt-2 px-2 py-1 font-semibold text-white" onclick="delPwRestore('`+item._id+`')"> Delete </button>
+                  </div>
                 </div>
-
               `;
           });
         } else {
