--- a/client/back-office/views/login.html
+++ b/client/back-office/views/login.html
@@ -129,13 +129,13 @@
                   "
                 >
                   <div class="text-white px-4 py-6 md:p-12 md:mx-6">
-                    <h4 class="text-xl font-semibold mb-6">
+                    <h4 class="text-xl font-semibold mb-6 primary">
                       We are more than just an animal business!
                     </h4>
-                    <p class="text-sm">
+                    <p class="text-black">
                       If you aren't a company or an admin, please go back to the
                       <a
-                        class="underline text-cyan-300"
+                        class="underline primary"
                         href="http://localhost:3000/f"
                         >front office</a
                       >.
