--- a/client/back-office/views/ecommerce.html
+++ b/client/back-office/views/ecommerce.html
@@ -20,7 +20,17 @@
           window.location.href = "http://localhost:5000/b/views/home.html";
         $("#sidebar").load("../tabs/sidebar.html");
         $("#ecommerceInfo").load("../tabs/ecommerce-info.html");
+        setUser();
       });
+      let user;
+      const setUser = async () => {
+        user = await isUserLogged();
+        if (user === undefined)
+          window.location.href = "http://localhost:5000/b/views/login.html";
+        if (user.admin) {
+          $(".forAdmin").removeClass("hidden");
+        }
+      };
     </script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
