text nelle prenotazioni bo

--- a/client/back-office/views/prenotations.html
+++ b/client/back-office/views/prenotations.html
@@ -18,6 +18,7 @@
       let totPrenotations = 0;
       var user;
       var companies = [];
+      const none = "-";
 
       $(document).ready(async () => {
         user = await isUserLogged();
@@ -288,6 +289,7 @@
                 tmp += makeItemPrenotation(
                   index,
                   item._id,
+                  item.text,
                   item.place,
                   item.start,
                   item.user,
@@ -335,6 +337,7 @@
       const makeItemPrenotation = (
         index,
         id,
+        text,
         place,
         start,
         user,
@@ -460,6 +463,9 @@
           user +
           `       <i class="fa fa-copy"></i></button>
                 </div>
+                <div><span class="font-semibold">Text: </span>` +
+                  ((text !== undefined) ? text : none) +`
+                </div>
               </div>
               </div>
               <div class="flex flex-col self-center">
@@ -512,6 +518,7 @@
               tmp += makeItemPrenotation(
                 index,
                 item._id,
+                item.text,
                 item.place,
                 item.start,
                 item.user,
