fix submit login

--- a/client/back-office/views/login.html
+++ b/client/back-office/views/login.html
@@ -69,7 +69,7 @@
                         CasAnimale - Back Office
                       </h4>
                     </div>
-                    <form onSubmit={login}>
+                    <form onSubmit={login()}>
                       <p class="mb-4">Please login to your account</p>
                       <div class="mb-4">
                         <input
