--- a/client/back-office/views/profile.html
+++ b/client/back-office/views/profile.html
@@ -138,7 +138,7 @@
       }
 
       const delPwRestore = async (id) => {
-        let ret = await fetch("http://localhost:5000/api/emailrestore/" + id, {
+        let ret = await fetch("http://site212247.tw.cs.unibo.it/api/emailrestore/" + id, {
           method: "DELETE",
           credentials: "include",
         });
